2007-09-26  Carlos Garnacho  <carlosg@gnome.org>

	Add a diagnostics tool, returns the whole system configuration
	without using DBus, it's way easier to debug problems when dealing
	with the distro.

	* Utils/Backend.pm: Remove DBus usage, move DBus related functions to:
	* Utils/DBus.pm: new file.
	* Utils/Makefile: added here too.
	* SystemToolsBackend.pl.in: error out if no module was requested here.
	* Platform: use Utils::DBus.
	* StbObject.pm: use Utils::DBus. ensure platform and set counter here.
	* diagnostics.pl: new tool, uses the s-t-b core, which doesn't depend
	on DBus anymore.
	* Makefile.am: added diagnostics.pl

2007-09-17  Carlos Garnacho  <carlosg@gnome.org>

	* Init/Services (get_gentoo_*): general improvements to the gentoo
	services parsing code, slightly refactored code, and faster (calling
	rc-status -l too many times was the main culprit)

2007-09-15  Carlos Garnacho  <carlosg@gnome.org>

	* Users/Users.pm (add_user): adduser doesn't work as expected in
	Slackware, make sure we fallback to useradd for that distro. Spotted
	by Markus Kanet <<darkvision@gmx.info>

2007-09-14  Carlos Garnacho  <carlosg@gnome.org>

	* Release 2.4.0

2007-09-12  Markus Kanet  <darkvision@gmx.info>

	* Utils/Platform.pm: Add support for Bluewhite64.

2007-09-12  Carlos Garnacho  <carlosg@gnome.org>

	* SystemToolsBackends.pl.in: move some includes to
	* Utils/Backend.pm: here

2007-09-12  Carlos Garnacho  <carlosg@gnome.org>

	* Users/Users.pm (add_user): use abbreviated options for useradd, they
	seem to be more generic, and makes adding users work again for
	Slackware. Based on a patch by Markus Kanet <darkvision@gmx.info>. Bug
	#471083.

2007-09-06  Carlos Garnacho  <carlosg@gnome.org>

	* Utils/Backend.pm, Utils/Report.pm: unused code cleanup.
	* SystemToolsBackend.pl.in: update to Utils::Backend::init()
	parameters.

2007-09-03  Carlos Garnacho  <carlosg@gnome.org>

	* Release 2.3.2

2007-09-03  Carlos Garnacho  <carlosg@gnome.org>
